add js filter interface
