# app/handlers/v1/primary_handler.go
@@ -72,7 +72,7 @@ func (ch *JspHandler) List(ctx iris.Context) mvc.Result {
 // @Description 查询js主分类信息
 // @Tags 应用管理 - js主分类
 // @Param id path string true "js主分类id"
-// @Success 200 {object} vo.JsPrimaryResp "查询域名成功"
+// @Success 200 {object} vo.JsPrimaryResp "查询js主分类信息成功"
 // @Failure 400 {object} vo.Error  "请求参数错误"
 // @Failure 401 {object} vo.Error "当前用户登录令牌失效"
 // @Failure 403 {object} vo.Error "当前操作无权限"
@@ -144,11 +144,31 @@ func (ch *JspHandler) Delete(ctx iris.Context) mvc.Result {
 	return response.OK()
 }
 
+// GetAllsCategoryTree godoc
+// @Summary 获取js主分类下的分类树(只到分类)
+// @Description 获取js主分类下的分类树
+// @Tags 应用管理 - js主分类
+// @Success 200 {array} vo.Primaries "获取js主分类下的分类树成功"
+// @Failure 400 {object} vo.Error "请求参数错误"
+// @Failure 401 {object} vo.Error "当前用户登录令牌失效"
+// @Failure 403 {object} vo.Error "当前操作无权限"
+// @Failure 500 {object} vo.Error "服务器内部错误"
+// @Security ApiKeyAuth
+// @Router /api/v1/application/js_primary/category/tree [get]
+func (ch *JspHandler) GetAllsCategoryTree(ctx iris.Context) mvc.Result {
+	resp, ex := ch.Svc.GetAllsCategoryTree()
+	if ex != nil {
+		return response.Error(ex)
+	}
+	return response.JSON(resp)
+}
+
 // BeforeActivation 初始化路由
 func (ch *JspHandler) BeforeActivation(b mvc.BeforeActivation) {
 	b.Handle(iris.MethodPost, "/js_primary", "Create", middlewares.RecordSystemLog("Create", "", "创建JS分类成功"))
 	b.Handle(iris.MethodGet, "/js_primaries", "List")
 	b.Handle(iris.MethodGet, "/js_primary/{id:string}", "Get")
+	b.Handle(iris.MethodGet, "/js_primary/category/tree", "GetAllsCategoryTree")
 	b.Handle(iris.MethodPut, "/js_primary/{id:string}", "Update", middlewares.RecordSystemLog("Update", "id", "更新JS分类成功"))
 	b.Handle(iris.MethodDelete, "/js_primary/{id:string}", "Delete", middlewares.RecordSystemLog("Delete", "id", "删除JS分类成功"))
 }
