# app/handlers/v1/user_handler.go
@@ -192,24 +192,24 @@ func (u *UserHandler) UpdateRoles(ctx iris.Context) mvc.Result {
 // @Description 修改用户js分类权限
 // @Tags 权限管理 - 管理员
 // @Param id path string true "用户id"
-// @Param parameters body vo.UserUpdateCategoryReq true "UserUpdateCategoryReq"
+// @Param parameters body vo.UserUpdateJscAndJsReq true "UserUpdateJscAndJsReq"
 // @Success 200 "修改用户分类权限成功"
 // @Failure 400 {object} vo.Error "请求参数错误"
 // @Failure 401 {object} vo.Error "当前用户登录令牌失效"
 // @Failure 403 {object} vo.Error "当前操作无权限"
 // @Failure 500 {object} vo.Error "服务器内部错误"
 // @Security ApiKeyAuth
-// @Router /api/v1/permission/user/{id}/categories [put]
-func (u *UserHandler) UpdateCategory(ctx iris.Context) mvc.Result {
+// @Router /api/v1/permission/user/{id}/jsc_js [put]
+func (u *UserHandler) UpdateJSCAndJS(ctx iris.Context) mvc.Result {
 	id, err := ctx.Params().GetInt64(constant.ID)
 	if err != nil {
 		return response.Error(exception.Wrap(response.ExceptionInvalidRequestParameters, err))
 	}
-	param := &vo.UserUpdateCategoryReq{}
+	param := &vo.UserUpdateJscAndJsReq{}
 	if err := ctx.ReadJSON(param); err != nil {
 		return response.Error(exception.Wrap(response.ExceptionInvalidRequestBody, err))
 	}
-	ex := u.Svc.UpdateCategory(u.UserName, id, param)
+	ex := u.Svc.UpdateJSCAndJS(u.UserName, id, param)
 	if ex != nil {
 		return response.Error(ex)
 	}
@@ -269,19 +269,19 @@ func (u *UserHandler) GetRolesByUserID(ctx iris.Context) mvc.Result {
 // @Description 查询用户js分类权限信息
 // @Tags 权限管理 - 管理员
 // @Param id path string true "用户id"
-// @Success 200 {object} vo.JsCategoryBriefResp "查询用户js分类信息成功"
+// @Success 200 {object} vo.JsJscAndJsBriefResp "查询用户js分类信息成功"
 // @Failure 400 {object} vo.Error  "请求参数错误"
 // @Failure 401 {object} vo.Error "当前用户登录令牌失效"
 // @Failure 403 {object} vo.Error "当前操作无权限"
 // @Failure 500 {object} vo.Error "服务器内部错误"
 // @Security ApiKeyAuth
-// @Router /api/v1/permission/user/{id}/categories [get]
-func (u *UserHandler) GetCategoryByUserID(ctx iris.Context) mvc.Result {
+// @Router /api/v1/permission/user/{id}/jsc_js [get]
+func (u *UserHandler) GetJscAndJsByUserID(ctx iris.Context) mvc.Result {
 	id, err := ctx.Params().GetInt64(constant.ID)
 	if err != nil {
 		return response.Error(exception.Wrap(response.ExceptionInvalidRequestParameters, err))
 	}
-	res, ex := u.Svc.GetCategoryByUserID(u.UserName, id)
+	res, ex := u.Svc.GetJscAndJsByUserID(u.UserName, id)
 	if ex != nil {
 		return response.Error(ex)
 	}
@@ -367,9 +367,9 @@ func (u *UserHandler) BeforeActivation(b mvc.BeforeActivation) {
 	b.Handle(iris.MethodDelete, "/user/{id:string}", "Delete", middlewares.RecordSystemLog("Delete", "id", "删除用户成功"))
 	b.Handle(iris.MethodDelete, "/user/multi", "MultiDelete", middlewares.RecordSystemLog("Delete", "ids", "批量删除用户成功"))
 	b.Handle(iris.MethodPut, "/user/{id:string}/roles", "UpdateRoles", middlewares.RecordSystemLog("Update", "id", "更新用户角色成功"))
-	b.Handle(iris.MethodPut, "/user/{id:string}/categories", "UpdateCategory", middlewares.RecordSystemLog("Update", "id", "更新用户js分类成功"))
+	b.Handle(iris.MethodPut, "/user/{id:string}/jsc_js", "UpdateJSCAndJS", middlewares.RecordSystemLog("Update", "id", "更新用户js分类成功"))
 	b.Handle(iris.MethodGet, "/user/{id:string}/roles", "GetRolesByUserID")
-	b.Handle(iris.MethodGet, "/user/{id:string}/categories", "GetCategoryByUserID")
+	b.Handle(iris.MethodGet, "/user/{id:string}/jsc_js", "GetJscAndJsByUserID")
 	b.Handle(iris.MethodGet, "/user/menus", "GetUserMenus")
 	b.Handle(iris.MethodPatch, "/user/{id:string}", "StatusChange", middlewares.RecordSystemLog("Update", "id", "更新用户成功"))
 }
