# docs/swagger.json
@@ -3887,6 +3887,55 @@
                 }
             }
         },
+        "/api/v1/application/js_primary/category/tree": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "获取js主分类下的分类树",
+                "tags": [
+                    "应用管理 - js主分类"
+                ],
+                "summary": "获取js主分类下的分类树(只到分类)",
+                "responses": {
+                    "200": {
+                        "description": "获取js主分类下的分类树成功",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/vo.Primaries"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/vo.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "当前用户登录令牌失效",
+                        "schema": {
+                            "$ref": "#/definitions/vo.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "当前操作无权限",
+                        "schema": {
+                            "$ref": "#/definitions/vo.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/vo.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/application/js_primary/{id}": {
             "get": {
                 "security": [
@@ -3910,7 +3959,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "查询域名成功",
+                        "description": "查询js主分类信息成功",
                         "schema": {
                             "$ref": "#/definitions/vo.JsPrimaryResp"
                         }
@@ -6111,7 +6160,7 @@
                 }
             }
         },
-        "/api/v1/permission/user/{id}/categories": {
+        "/api/v1/permission/user/{id}/jsc_js": {
             "get": {
                 "security": [
                     {
@@ -6136,7 +6185,7 @@
                     "200": {
                         "description": "查询用户js分类信息成功",
                         "schema": {
-                            "$ref": "#/definitions/vo.JsCategoryBriefResp"
+                            "$ref": "#/definitions/vo.JsJscAndJsBriefResp"
                         }
                     },
                     "400": {
@@ -6185,12 +6234,12 @@
                         "required": true
                     },
                     {
-                        "description": "UserUpdateCategoryReq",
+                        "description": "UserUpdateJscAndJsReq",
                         "name": "parameters",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/vo.UserUpdateCategoryReq"
+                            "$ref": "#/definitions/vo.UserUpdateJscAndJsReq"
                         }
                     }
                 ],
@@ -6966,13 +7015,15 @@
                 }
             }
         },
-        "vo.JsCategoryBriefResp": {
+        "vo.JsCategoryBrief": {
             "type": "object",
             "properties": {
                 "id": {
+                    "description": "分类的ID",
                     "type": "integer"
                 },
                 "title": {
+                    "description": "分类的title",
                     "type": "string"
                 }
             }
@@ -7019,6 +7070,25 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "vo.JsJscAndJsBriefResp": {
+            "type": "object",
+            "properties": {
+                "categories_id": {
+                    "description": "分类id",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "primaries_id": {
+                    "description": "主分类id",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
@@ -7402,6 +7472,26 @@
                 }
             }
         },
+        "vo.Primaries": {
+            "type": "object",
+            "properties": {
+                "categories": {
+                    "description": "该主分类下的分类",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/vo.JsCategoryBrief"
+                    }
+                },
+                "id": {
+                    "description": "主分类id",
+                    "type": "integer"
+                },
+                "title": {
+                    "description": "主分类title",
+                    "type": "string"
+                }
+            }
+        },
         "vo.ProfileResp": {
             "type": "object",
             "properties": {
@@ -7758,11 +7848,18 @@
                 }
             }
         },
-        "vo.UserUpdateCategoryReq": {
+        "vo.UserUpdateJscAndJsReq": {
             "type": "object",
             "properties": {
                 "category_ids": {
                     "description": "js分类IDS",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "primary_ids": {
+                    "description": "js主分类ID",
                     "type": "array",
                     "items": {
                         "type": "integer"
